[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchflex"
version = "0.1.0"
description = "Flexible device management for CPU/GPU/TPU"
authors = [{ name="Jobayer Hossain", email="itswolf000@gmail.com"}]
license = {text = "MIT"}
dependencies = ["torch", "torch_xla"]
